# AutoClickeRGUI

./: LICENSE  README.md  package-lock.json  package.json
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
